# ag-radius

./: CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
app/: CMakeLists.txt
app/include/: AccessGatewayRadiusClient.h
app/src/: main.cpp
app/src/agrclib/: AccessGatewayRadiusClient.cpp
config/default/: dictionary  dictionary.nomadix  dictionary.wba  radiusclient.conf  servers
